# mathstralpix

./: README.md  main.py  pyproject.toml  requirements.txt  run.py
src/mistral_mathpix/: main.py  ocr_processor.py
