[project]
name = "mistral-mathpix"
version = "0.1.0"
description = "Smol script for OCR'ing mathematics"
requires-python = ">=3.8"
dependencies = [
    "pillow",   # For image handling
    "mistralai",  # Mistral AI client
    "python-dotenv",  # For environment variables
    "pnglatex",  # For rendering LaTeX to PNG
]

[tool.ruff]
select = ["E", "F", "I"]
ignore = []
line-length = 88 
